--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,11 @@ ext {
     compileSdkVersion = 28
     buildToolsVersion = '28.0.3'
 
-    dagger2Version = '2.16'
-    lifecycleVersion = '2.0.0'
+    dagger2Version = '2.21'
+    lifecycleVersion = '2.1.0'
+    gsonVersion = '2.8.2'
+    retrofitVersion = '2.6.2'
+    rxjava2Version = '2.1.9'
+    rxandroidVersion = '2.1.0'
+
 }
