Added MovieList Fragment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,11 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:$rootProject.retrofitVersion"
     implementation "com.squareup.retrofit2:converter-moshi:$rootProject.retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$rootProject.retrofitVersion"
+
+    // recycler view
+    implementation "androidx.recyclerview:recyclerview:$rootProject.recyclerViewVersion"
+
+    // card view
+    implementation "androidx.cardview:cardview:$rootProject.cardViewVersion"
+
 }
