--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,7 @@ dependencies {
     // card view
     implementation "androidx.cardview:cardview:$rootProject.cardViewVersion"
 
+    // glide
+    implementation "com.github.bumptech.glide:glide:$rootProject.glideVersion"
+
 }
